kubernetes/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 15
  replicas: 1
  # Стратегия развёртывания. Recreate — удалит сначала все старые Pod'ы
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять Pod'ы порциями
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
            - key: app
              operator: In
              values:
              - frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-012-056/sausage-store/sausage-nginx:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          ports:
            - name: frontend
              containerPort: 80
      imagePullSecrets:
        - name: docker-config-secret
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
